[tool.poetry]
name = "UNI"
version = "0.1.0"
description = ""
authors = ["ZettZet <dmesser@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.6"
flask-restx = "^0.2.0"
flask-login = "^0.5.0"
mongoengine = "^0.20.0"
bcrypt = "^3.1.7"
flask = "^1.1.2"
Flask-Cors = "^3.0.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint = "^2.5.3"
autoflake = "^1.3.1"
autopep8 = "^1.5.3"
black = "^19.10b0"
